# internal/models/response/check_response.go
@@ -1,9 +1,7 @@
 package response
 
 // VersionInfo holds information about the latest version of the app.
-
 type VersionInfo struct {
-	// existing fields...
 	// @Description The URL where the latest version can be downloaded from.
 	// In debug mode, this URL is always provided, even when no update is required.
 	Url string `json:"url,omitempty"`
@@ -14,11 +12,17 @@ type VersionInfo struct {
 	// VersionName is the version of the latest application version.
 	VersionName string `json:"versionName,omitempty"`
 
+	// @Description The size of the latest version file in bytes.
+	FileSize int64 `json:"fileSize,omitempty"`
+
+	// @Description The description of what's new in the latest version.
+	UpdateDescription string `json:"updateDescription,omitempty"`
+
 	// Checksum is the SHA-256 checksum of the latest application version.
 	Checksum string `json:"checksum,omitempty"` // Add Swagger description here
 }
 
-// @Description holds the overall update information for an application.
+// CheckResponse holds the overall update information for an application.
 type CheckResponse struct {
 	// UpdateType indicates the type of update required ('hard', 'soft', or 'none').
 	// When UpdateType is 'none', the LatestVersion field will not be present in the response.
